Added test deleteProductFromCart